# nanozymes

./: .gitignore  pyproject.toml
ML System Design Doc/: ML_System_Design_Doc_1_4.md
NanoBacked/: .gitignore
nanozyme/: pyproject.toml
notebooks/: test_LLM.ipynb
remote_repositories/API service/: .gitignore  README.md  auto_index.py  dockerfile  get_context.py  main.py  pyproject.toml  requirements.txt  tmp.py
remote_repositories/API service/data/embeddings/: embds_last_part.pt  embds_last_part_C4RA15675G.pdf.pt
remote_repositories/API service/src/: chat.py  embedder_e5.py  find_params.py  find_similary.py  find_simulary.py  get_context.py  get_parameters.py  logger.py  pdf2text.py
remote_repositories/redirect_service/src/: chat.py
services/doccano/: README.md
