[tool.ruff]
line-length = 120

# Enable Flake's "E" and "F" codes by default.
select = ["E", "F", "U", "N", "S", "C", "B", "A", "Q", "A", "YTT", "RUF", "RUF100", "W", "I", ]
ignore = ["N806", "S101", "A003", "N815", "S104", "UP006", "RUF001"]

# Exclude a variety of commonly ignored directories.
exclude = [".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".idea",
    ".streamlit",
]
extend-exclude = ["tests", "ai_talks/assets", "ai_talks/src/styles"]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"
[tool.poetry]
name = "aiohttp"
version = "0.1.0"
description = ""
authors = ["Roman Sim roman_407@mail.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.0"
matplotlib = "^3.8.0"
numpy = "1.25.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
